--- a/app/src/main/res/layout/fragment_reminders.xml
+++ b/app/src/main/res/layout/fragment_reminders.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/reminders"
+        android:textStyle="bold"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,9 +20,10 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:layout_marginTop="16dp"
+        android:paddingHorizontal="16dp"
         android:text="@string/see_below"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,9 +32,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvReminders"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
